media/com_quantummanager/css/quantumcropperjs.css
/* ... */
.quantumcropperjs-module .input-range-wrap > div input[type=range]::-webkit-slider-runnable-track {
    box-shadow: none;
    border: none;
    background: transparent;
    -webkit-appearance: none;
}
.quantumcropperjs-module .input-range-wrap > div input[type=range]::-moz-range-track {
    box-shadow: none;
    border: none;
    background: transparent;
}
.quantumcropperjs-module .input-range-wrap > div input[type=range]::-moz-focus-outer {
    border: 0;
}
.quantumcropperjs-module .input-range-wrap > div input[type=range]::-webkit-slider-thumb {
    width: 17px;
    height: 17px;
    border: 0;
    background: #fff;
    border-radius: 100%;
    box-shadow: 0 0 1px 0px rgba(0,0,0,0.1);
    -webkit-appearance: none;
}
.quantumcropperjs-module .input-range-wrap > div input[type=range]::-moz-range-thumb {
    width: 17px;
    height: 17px;
    border: 0;
    background: #fff;
    border-radius: 100%;
    box-shadow: 0 0 1px 0px rgba(0,0,0,0.1);
}
.quantumcropperjs-module .input-range-wrap > div input[type=range]::-ms-thumb {
    width: 17px;
    height: 17px;
    background: #fff;
    border-color: transparent;
    border-width: 6px 0;
    color: transparent;
}
.quantumcropperjs-module .button-wrap {
    margin-top: 35px;
    display: flex;
    justify-content: space-between;
}
.quantumcropperjs-module .button-wrap > button {
    width: 48%;
    text-align: center;
    white-space: nowrap;
}
.quantumcropperjs-module .button-wrap .qm-btn-save {
    background: #78abde;
    color: #fff;
    border: none;
}
.quantumcropperjs-module .button-wrap .qm-btn-close {
    background: #333;
    color: #fff;
    border: none;
}
.quantumcropperjs-module .toolbar > div > div > div > label {
    margin-bottom: 5px;
}
.quantumcropperjs-module .editor {
    position: relative;
    margin: auto;
    height: 100%;
    flex: 1;
}
.quantumcropperjs-module .editor .cropperjs {
    position: relative;
    margin: auto;
    height: 100%;
    background: #eee;
}
.quantumcropperjs-module .toolbar-sizes {
    position: absolute;
    display: block !important;
    bottom: 15px;
    width: 65%;
    margin-left: auto;
    margin-right: auto;
    left: 0;
    right: 0;
    padding: 10px;
    border-radius: 5px;
    background: #78abde;
    color: #fff;
    opacity: 0.9;
}
.quantumcropperjs-module .toolbar-sizes > div {
    display: flex;
    width: 100%;
    justify-content: center;
    text-transform: uppercase;
    font-size: 10px;
    line-height: 12px;
}
.quantumcropperjs-module .toolbar-sizes > div span {
    display: inline-block;
    margin-right: 4px;
}
.quantumcropperjs-module .toolbar-footer {
    position: absolute;
    display: flex;
    justify-content: center;
    bottom: 10px;
    left: 0;
    right: 0;
    text-align: center;
}
.quantumcropperjs-module .toolbar-footer > div {
    display: flex;
}
.quantumcropperjs-module .toolbar-footer > div > div {
    margin-right: 5px;
}
.quantumcropperjs-module .toolbar-footer > div > div:last-child {
    margin-right: 0;
}
.quantumcropperjs-module .toolbar-footer > div .qm-btn {
    background: rgba(243, 243, 243, .85);
}

.cropper-point {
    width: 10px !important;
    height: 10px !important;
}
.cropper-point.point-nw {
    left: 0;
    top: 0;
}
.cropper-point.point-n {
    top: 0;
}
.cropper-point.point-ne {
    right: 0;
    top: 0;
}
.cropper-point.point-sw {
    bottom: 0;
    left: 0;
}
.cropper-point.point-s {
    bottom: 0;
}
.cropper-point.point-se {
    bottom: 0;
    right: 0;
}
@media screen and (max-width: 800px) {
    .quantumcropperjs-module .toolbar {
        width: 30%;
        min-width: 230px;
    }
}

